apps/gitlab/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: gitlab
spec:
  type: ClusterIP
  selector:
    app: gitlab
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
